# GreaperGAL

./: CMakeLists.txt  GALWin.vcxproj
OpenGLGenerator/: generator.py
Private/: GreaperGALDLL.cpp  GreaperGALDLL.h  ImplPrerequisites.h  WindowManager.cpp  WindowManager.h
Private/GAF/: GreaperDisplayDLL.cpp  GreaperDisplayDLL.h  ImplPrerequisites.h  WindowManager.cpp  WindowManager.h
Private/Win/: GLWinWindow.cpp  GLWinWindow.h  VkWinWindow.cpp  VkWinWindow.h  WinDPI.cpp  WinMonitor.cpp  WinMonitorQuery.cpp  WinWindow.cpp  WinWindow.h
Public/: GALPrerequisites.h  IWindowManager.h
Public/Base/: IWindow.h  Monitor.h  VideoMode.h
Public/GAF/: DispPrerequisites.h  IWindowManager.h
Public/GAF/Base/: IWindow.h  Monitor.h  VideoMode.h
Public/GAF/Win/: GLWinWindow.h  WinWindow.h
Public/Lnx/: GLLnxWindow.h  GLWLWindow.h  GLX.h  GLX11Window.h  LnxWindow.h  VkLnxWindow.h  VkWLWindow.h  VkX11Window.h  WLWindow.h  Wayland.h  X11Window.h
Public/OpenGL/: GALEGL.h  GALGL.h  GALGLX.h  GALWGL.h  GL.h  GLDefines.h
Public/Win/: GLWinWindow.h  VkWinWindow.h  WGL.h  WinMonitor.h  WinWindow.h
